--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
                         <div class="card-footer card-big-footer">
                            <p class="welcome_text1" style="margin: 0px;">
                               Nagy öröm számunkra, hogy megérkeztetek. Mindent megteszünk azért, hogy itt tartózkodásotok kellemes és emlékezetes legyen. Köszönjük, hogy minket választottatok.
-                              </p>
-                              <br/>
+                           </p>
+                           <br/>
                            <p class="welcome_text2" style="margin: 0px; padding-top: 3px;">
-                              Legjobbakat kívánunk,</br>
-                              <p style="margin: 0px;" class="welcome_text3">Tünde és Jócó!</p>
+                              Legjobbakat kívánunk,
+                           </p>
+                           <p style="margin: 0px;" class="welcome_text3">Tünde és Jócó!</p>
                            </p>
                         </div>
                      </div>
@@ -69,20 +70,21 @@
                            <h2 class="checkInOut">Bejelentkezés és kijelentkezés</h2>
                            <p class="checkIn" style="margin: 0px; padding-top: 15px;">Bejelentkezés: 13:00-tól éjfélig</p>
                            <p class="checkOut" style="margin: 0px !important; padding-top: 3px;">Kijelentkezés: 6:00 és 12:00 óra között</p>
-
                            <p class="checkOut2" style="margin: 0px; padding-top: 11px;">Amennyiben a kijelentkezés után még maradnál, biztosítunk csomagmegőrzési lehetőséget.</p>
                         </div>
                      </div>
                      <div class="card">
                         <div class="card-footer card-big-footer">
-                           <h2 class="list-title">Fontos tudnivalók</h2>
-                           <p style="margin: 0px; padding-top: 5px;">Hadd osszuk meg veled néhány praktikus tudnivalót a kényelmes tartózkodásodhoz:</p>
-                           <h3 style="margin: 0px; padding-top: 11px;">WiFi Információk:</h3>
-                           <p style="margin: 0px; padding-top: 3px;"><b>WiFi neve:</b> Fuzfa Apartman <br/> <b>Jelszó:</b> fuzfaapartman2023</p>
-                           <h3 style="margin: 0px; padding-top: 11px;">Melegvíz használat:</h3>
-                           <p style="margin: 0px; padding-top: 3px;">Csak hogy tudd, a melegvíz napkollektorokból érkezik. Amikor szeretnéd használni, várj kérlek egy rövid ideig.</p>
-                           <h3 style="margin: 0px; padding-top: 11px;">Dohányzás:</h3>
-                           <p style="margin: 0px; padding-top: 3px;">Ha dohányoznál, az erkélyen van erre lehetőség. Van egy hamutartó és székek is, amiket használhatsz.</p>
+                           <h2 class="list-title impInfo">Fontos tudnivalók</h2>
+                           <p class="impInfo1">Engedj meg, hogy megosszunk veled néhány hasznos információt, hogy tartózkodásod még kényelmesebb legyen:</p>
+                           <h3 class="wifiInfo" style="margin: 0px !important;">WiFi Információk:</h3>
+                           <p class="wifiName" style="margin: 0px; padding-top: 3px;">Neve: Fuzfa Apartman</p>
+                           <p class="wifiPsw" style="margin: 0px;">Jelszó: fuzfaapartman2023</p>
+
+                           <h3 class="coldWater" style="margin: 0px !important; padding-top: 16px;">Melegvíz használat:</h3>
+                           <p class="coldWaterDesc" style="margin: 0px; padding-top: 3px;">A melegvíz napkollektorokból érkezik. Amikor használni szeretnéd, néhány percet várnod kell, hogy a víz meleg legyen.</p>
+                           <h3 class="smokingTitle" style="margin: 0px; padding-top: 16px;">Dohányzás:</h3>
+                           <p class="smokingDescription" style="margin: 0px; padding-top: 3px;">Ha dohányoznál, az erkélyen van erre lehetőség.</p>
                            <p style="margin: 0px; padding-top: 11px;">
                               Reméljük, hogy jól fogod érezni magad nálunk, és minden információ rendelkezésedre áll a kényelmes időtöltéshez. Ha még bármilyen kérdésed lenne, ne habozz felvenni velünk a kapcsolatot.
                            </p>
