--- a/index.html
+++ b/index.html
@@ -220,48 +220,59 @@
               <h1 class="sarkiTitle" style="text-align: center">
                 Pár lépésre levő üzlet
               </h1>
-              <div style="margin: 0px !important" class="movie-header">
-                <img src="img/cards/sarki2.png" alt="" class="movie-cover" />
-                <div class="movie-infos">
-                  <div class="movie-block">
-                    <i class="icon f7-icons">map_pin_ellipse</i>
-                    <div class="movie-block-name sarkiType">Típus</div>
-                    <div class="movie-block-text sarkiTypeName">Vegyes</div>
-                  </div>
-                  <div class="movie-block">
-                    <i class="icon f7-icons">clock_fill</i>
-                    <div class="movie-block-name timeWalk">Gyalog</div>
-                    <div class="movie-block-text">2 perc</div>
-                  </div>
-                  <div class="movie-block">
-                    <i class="icon f7-icons">star_fill</i>
-                    <div class="movie-block-name sarkiRating">Értékelés</div>
-                    <div class="movie-block-text">4.7</div>
-                  </div>
-                </div>
-              </div>
-              <p class="sarkiDescription">
-                A közvetlen közelünkben lévő vegyes üzlet egy kényelmes hely,
-                ahol széles választékban megtalálhatjuk mindennapi
-                szükségleteinket. Az üzletben friss élelmiszerek mellett
-                tisztítószerek, valamint szépségápolási termékek és italok is
-                rendelkezésünkre állnak.
-              </p>
-              <a
-                target="_blank"
-                href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu"
-                class="link external link-banner dark-theme-green link-chevron"
+              <div
+                style="
+                  border-radius: 19px;
+                  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+                "
               >
-                <i class="icon f7-icons">map_pin_ellipse</i>
-                <div class="link-banner-text">
-                  <div class="link-banner-title navigationTitle">
-                    Útvonal tervezés
-                  </div>
-                  <div class="link-banner-subtitle navigationDesc">
-                    Google térképen
+                <div style="margin: 0px !important" class="movie-header">
+                  <img src="img/cards/sarki2.png" alt="" class="movie-cover" />
+                  <div class="movie-infos">
+                    <div class="movie-block">
+                      <i class="icon f7-icons">map_pin_ellipse</i>
+                      <div class="movie-block-name sarkiType">Típus</div>
+                      <div class="movie-block-text sarkiTypeName">Vegyes</div>
+                    </div>
+                    <div class="movie-block">
+                      <i class="icon f7-icons">clock_fill</i>
+                      <div class="movie-block-name timeWalk">Gyalog</div>
+                      <div class="movie-block-text">2 perc</div>
+                    </div>
+                    <div class="movie-block">
+                      <i class="icon f7-icons">star_fill</i>
+                      <div class="movie-block-name sarkiRating">Értékelés</div>
+                      <div class="movie-block-text">4.7</div>
+                    </div>
                   </div>
                 </div>
-              </a>
+                <p
+                  style="margin: 0px !important; padding: 15px"
+                  class="sarkiDescription"
+                >
+                  A közvetlen közelünkben lévő vegyes üzlet egy kényelmes hely,
+                  ahol széles választékban megtalálhatjuk mindennapi
+                  szükségleteinket. Az üzletben friss élelmiszerek mellett
+                  tisztítószerek, valamint szépségápolási termékek és italok is
+                  rendelkezésünkre állnak.
+                </p>
+                <a
+                  style="margin: 0px !important"
+                  target="_blank"
+                  href="https://www.google.com/maps/dir/46.7012078,25.507957/Sarki+%C3%9Czlet+--+%C3%96nkiszolg%C3%A1l%C3%B3,+Strada+Ciumani,+Joseni+537130/@46.700903,25.5058714,17.41z/data=!4m9!4m8!1m0!1m5!1m1!1s0x474aedd1cd731fd3:0x12633330c2064bd1!2m2!1d25.5066263!2d46.7004413!3e2?entry=ttu"
+                  class="link external link-banner dark-theme-green link-chevron"
+                >
+                  <i class="icon f7-icons">map_pin_ellipse</i>
+                  <div class="link-banner-text">
+                    <div class="link-banner-title navigationTitle">
+                      Útvonal tervezés
+                    </div>
+                    <div class="link-banner-subtitle navigationDesc">
+                      Google térképen
+                    </div>
+                  </div>
+                </a>
+              </div>
               <h1
                 class="favouriteRestaurants"
                 style="padding-top: 15px; text-align: center"
